# django_project_template

./: .gitignore  .replit  Pipfile  Procfile  Procfile.windows  README.md  pyproject.toml  requirements.txt  requirements_dependency.txt
docs/: README.md
docs/running_on_replit/: installation.md
src/django_project/: settings.py
