[tool.poetry]
name = "djangoprojecttemplate"
version = "0.1.0"
description = ""
authors = ["ShriekDj <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
